--- a/FatalityLoader.csproj
+++ b/FatalityLoader.csproj
@@ -2,7 +2,7 @@
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Configuration Condition=" '$(Configuration)' == '' ">Release</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{1B8637C0-AE47-454E-A033-239FD2BF5C9D}</ProjectGuid>
     <OutputType>Exe</OutputType>
@@ -12,9 +12,12 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PreBuildEvent />
+    <PostBuildEvent />
+    <CscToolPath>C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\Roslyn</CscToolPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +27,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -34,34 +37,34 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EnsoulSharp">
-      <HintPath>..\..\..\..\..\Documents\Mogeln\League\EnsoulSharp\Reference\EnsoulSharp.dll</HintPath>
+      <HintPath>C:\Users\Senth\Documents\Mogeln\League\EnsoulSharp\Reference\EnsoulSharp.dll</HintPath>
     </Reference>
     <Reference Include="EnsoulSharp.SDK">
-      <HintPath>..\..\..\..\..\Documents\Mogeln\League\EnsoulSharp\Reference\EnsoulSharp.SDK.dll</HintPath>
+      <HintPath>C:\Users\Senth\Documents\Mogeln\League\EnsoulSharp\Reference\EnsoulSharp.SDK.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
-      <HintPath>..\..\..\..\..\Documents\Mogeln\League\EnsoulSharp\Reference\log4net.dll</HintPath>
+      <HintPath>C:\Users\Senth\Documents\Mogeln\League\EnsoulSharp\Reference\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\..\..\..\Documents\Mogeln\League\EnsoulSharp\Reference\Newtonsoft.Json.dll</HintPath>
+      <HintPath>C:\Users\Senth\Documents\Mogeln\League\EnsoulSharp\Reference\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX">
-      <HintPath>..\..\..\..\..\Documents\Mogeln\League\EnsoulSharp\Reference\SharpDX.dll</HintPath>
+      <HintPath>C:\Users\Senth\Documents\Mogeln\League\EnsoulSharp\Reference\SharpDX.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Direct2D1">
-      <HintPath>..\..\..\..\..\Documents\Mogeln\League\EnsoulSharp\Reference\SharpDX.Direct2D1.dll</HintPath>
+      <HintPath>C:\Users\Senth\Documents\Mogeln\League\EnsoulSharp\Reference\SharpDX.Direct2D1.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Direct3D11">
-      <HintPath>..\..\..\..\..\Documents\Mogeln\League\EnsoulSharp\Reference\SharpDX.Direct3D11.dll</HintPath>
+      <HintPath>C:\Users\Senth\Documents\Mogeln\League\EnsoulSharp\Reference\SharpDX.Direct3D11.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Direct3D9">
-      <HintPath>..\..\..\..\..\Documents\Mogeln\League\EnsoulSharp\Reference\SharpDX.Direct3D9.dll</HintPath>
+      <HintPath>C:\Users\Senth\Documents\Mogeln\League\EnsoulSharp\Reference\SharpDX.Direct3D9.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.DXGI">
-      <HintPath>..\..\..\..\..\Documents\Mogeln\League\EnsoulSharp\Reference\SharpDX.DXGI.dll</HintPath>
+      <HintPath>C:\Users\Senth\Documents\Mogeln\League\EnsoulSharp\Reference\SharpDX.DXGI.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Mathematics">
-      <HintPath>..\..\..\..\..\Documents\Mogeln\League\EnsoulSharp\Reference\SharpDX.Mathematics.dll</HintPath>
+      <HintPath>C:\Users\Senth\Documents\Mogeln\League\EnsoulSharp\Reference\SharpDX.Mathematics.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
